refactor (review module)
1. use "beego api" to create an api project;
2. use swagger document (visit http://localhost:9001/swagger or online-host/swagger) to get api document,
3. user api has been finished.
