# review/routers/router.go
@@ -1,20 +1,21 @@
 // @APIVersion 1.0.0
-// @Title beego Test API
+// @Title OpenCT PQBS - api document
 // @Description beego has a very cool tools to autogenerate documents for your API
-// @Contact astaxie@gmail.com
-// @TermsOfServiceUrl http://beego.me/
+// @Contact kkoogqw@hotmail.com
+// @TermsOfServiceUrl http://
 // @License Apache 2.0
 // @LicenseUrl http://www.apache.org/licenses/LICENSE-2.0.html
 package routers
 
 import (
-	beego "github.com/beego/beego/v2/server/web"
 	"review/controllers"
+
+	beego "github.com/beego/beego/v2/server/web"
 )
 
 func init() {
-	ns := beego.NewNamespace("/v1",
-		beego.NSNamespace("/object",
+	ns := beego.NewNamespace("/review",
+		beego.NSNamespace("/demo",
 			beego.NSInclude(
 				&controllers.ObjectController{},
 			),
